--- a/app/src/css/toolbar.css
+++ b/app/src/css/toolbar.css
@@ -1,15 +1,24 @@
+:root{
+    --purple: #c842f4;
+    --main-grey: #aaaaaa;
+}
+
 .toolbar{
-    border: 1px solid purple;
+    border: 2px solid var(--purple);
     width: 600px;
     height: 100px;
     border-radius: 20px;
     display: flex;
+    background-color: var(--main-grey)
 }
 
 .parts{
     display: flex;
-    width: 100%;
+    width: 93%;
     overflow: scroll;
+    margin: 0 auto;
+    background-color: white;
+    
 }
 
 
