--- a/app/src/css/canvas.css
+++ b/app/src/css/canvas.css
@@ -5,3 +5,27 @@
     width: 400px;
     background-color: white;
 }
+
+#head {
+    width: 400px;
+    position: absolute;
+    z-index: 0;
+}
+
+#eyes {
+    width: 250px;
+    position: absolute;
+    z-index: 1;
+    margin-left: 75px;
+}
+
+#mouth {
+    width: 300px;
+    height: 150px;
+    position: absolute;
+
+    z-index: 1;
+    border: none;
+    margin-top: 27%;
+    margin-left: 50px;
+}
