--- a/app/src/css/emoji-part.css
+++ b/app/src/css/emoji-part.css
@@ -10,3 +10,9 @@
     background-color: rgb(243, 243, 243);
     border: 4px solid lightblue;
 }
+
+.emoji-part img {
+    width: 75px;
+    height: 75px;
+    margin: 0 auto 0 auto;
+}
