--- a/app/public/style/main.css
+++ b/app/public/style/main.css
@@ -10,3 +10,18 @@ body{
 .toolbar{
     margin: var(--center-horizontal);
 }
+
+.buttonContainer{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.randomBtn{
+    margin: 10px;
+    background-color: darkgray;
+    color: white;
+    font-size: 20px;
+    height: 50px;
+
+}
